test/sema/for-loop-over-non-iterable.delta.output
for-loop-over-non-iterable.delta:7:5: error: unknown identifier 'A.iterator'
    for (var i in A()) {}
    ^
