test/sema/for-loop-over-non-iterable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct A {
    init() {}
}

def main() {
    // CHECK: [[@LINE+1]]:5: error: unknown identifier 'A.iterator'
    for (var i in A()) {}
}
